--- a/assets/scss/components/_preloader.scss
+++ b/assets/scss/components/_preloader.scss
@@ -3,17 +3,15 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background: #fff;
+    background: var(--spinner-bg-color);
     z-index: 1001;
       .spinner{
         position: absolute;
-        top: 50%;
-        left: calc(50% - 70px);
-        width: 200px;
-        height: 64px;
-        margin-top: -32px;
-        margin-left: -32px;
-        background: url('../images/utils/spinner.gif') no-repeat 50% 50%; /*расположение (url) изображения gif и др. параметры*/
+        top: calc(50% - (var(--spinner-size) / 2));
+        left: calc(50% - (var(--spinner-size) / 2));
+        width: var(--spinner-size);
+        height: var(--spinner-size);
+        background: url('../images/utils/spinner.gif') no-repeat 50% 50%;
         background-size: cover;
       }
   }
