--- a/assets/scss/components/_back-to-top.scss
+++ b/assets/scss/components/_back-to-top.scss
@@ -28,12 +28,13 @@
     height: 55px;
     font-size: 35px;
     padding-bottom: 8px;
+    
+    &:hover{
+      border: 1px solid var(--primary-color);
+      box-shadow: 0px 0px 4px 2px var(--primary-color);
+      background-image: url(../images/icons/arrow.png);
+      background-color: #191d2196;
+      color: #fff;
+    }
   }
-}
-.to-top-btn:hover {
-  background-color: #191d2196;
-  background-image: url(../images/icons/arrow.png);
-  color: #ffffff;
-  border: 1px solid var(--primary-color);
-  box-shadow: 0px 0px 4px 2px var(--primary-color);
 }
