--- a/assets/scss/utils/variables/_theme.scss
+++ b/assets/scss/utils/variables/_theme.scss
@@ -5,7 +5,7 @@
     --font-color                    : #fff;
 
     //Theme colors
-    --primary-color		    	    : #47b8e0; // Main color. Used in most conponents and elements.
+    --primary-color		    	    : #52C2C8; // Main color. Used in most conponents and elements.
     --primary-color-contrast	    : #2f7a96; // Hover effect on buttons
     --spinner-bg-color              : #131522;
     --body-bg-color                 : #242424;
