--- a/assets/scss/components/_back-to-top.scss
+++ b/assets/scss/components/_back-to-top.scss
@@ -8,7 +8,7 @@
   right: 30px;
   cursor: pointer;
   display: none;
-  background-color: #6363635c;
+  background-color: rgba(27, 54, 64, 0.9);
   padding-bottom: 6px;
   border-radius: 50%;
   text-align: center;
@@ -22,6 +22,7 @@
   background-position: center center;
   -webkit-text-size-adjust: 0%;
   font-size-adjust: 0%;
+  border: 2px solid #2b4651;
   
   @include respond-to(desktop){
     width: 55px;
@@ -30,10 +31,10 @@
     padding-bottom: 8px;
     
     &:hover{
-      border: 1px solid var(--primary-color);
+      border: 2px solid var(--primary-color);
       box-shadow: 0px 0px 4px 2px var(--primary-color);
       background-image: url(../media/images/icons/arrow.png);
-      background-color: #191d2196;
+      background-color: rgba(27, 54, 64, 1); 
       color: #fff;
     }
   }
