--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -2,46 +2,80 @@
   width: 100vw;
   height: 100vh;
   position: relative;
-
-  .intro-box {
-    position: absolute;
-    bottom: 15vh;
-  }
-
-  .intro-heading {
-    font-weight: 700;
-    font-size: calc(var(--responsive-index) * 3);
-    margin-bottom: 15px;
-  }
-
-  .intro-subheading {
-    font-size: calc(var(--responsive-index) * 1.5);
-    color: #fff;
-  }
 }
 
-.hero-links {
-  margin-top: 25px;
-  .hero-link {
-    display: inline-block;
-    color: #fff;
-    font-size: 1.3em;
-    font-weight: bold;
-    text-transform: uppercase;
-    padding: 10px 15px;
-    border: 2px solid var(--primary-color);
-    border-radius: 5px;
-    transition: 0.3s linear background;
-    margin-right: 15px;
-    &:hover {
-      background-color: var(--primary-color);
+.intro-video-box{
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+
+.intro-overlay{
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0; left: 0;
+  background: linear-gradient(180deg, rgb(0 0 0 / 80%) 0%, rgb(0 0 0 / 60%) 100%);
+  // background-color: rgba(24, 24, 24, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .overlay-content{
+
+    text-align: center;
+
+    .intro-heading {
+      font-family: var(--font-primary);
+      font-weight: 700;
+      font-size: calc(var(--responsive-index) * 3.5);
+      margin-bottom: 15px;
+      text-transform: uppercase;
+      //font-family: 'Dosis'; //2
+      //font-family: 'Geologica' //3;
     }
-    &:last-child {
-      background-color: var(--primary-color);
-      margin-right: 0;
-      &:hover {
-        background-color: var(--primary-color-contrast);
+  
+    .intro-subheading {
+      font-family: var(--font-primary);
+      font-size: calc(var(--responsive-index) * 1.5);
+      font-weight: 300;
+      //font-family: 'Geologica'; //3;
+      //font-family: 'Questrial';
+
+    }
+
+    .intro-play-btn{
+      width: 100px;
+      height: 100px;
+      border: 3px solid var(--primary-color);
+      border-radius: 50%;
+      cursor: pointer;
+      margin-top: 50px;
+      background-color: transparent;
+      background-image: url(../media/images/icons/triangle.svg);
+      background-repeat: no-repeat;
+      background-position: bottom 5px center;
+      background-size: 75px 75px;
+      transform: rotate(90deg);
+      transition: .3s linear box-shadow;
+    
+      &:hover{
+        box-shadow: 0px 0px 8px 4px var(--primary-color)
       }
     }
   }
+
+  .scroll-down-btn{
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    bottom: 20px;
+    left: calc(50% - 50px);
+    background: url(../media/images/icons/arrow.png) no-repeat center center;
+    background-size: 30px 15px;
+    transform: rotate(180deg);
+    cursor: pointer;
+    animation: float 2s infinite ease-in-out; 
+  }
+
 }
