About section markup (two columns)

--- a/assets/scss/utils/variables/_theme.scss
+++ b/assets/scss/utils/variables/_theme.scss
@@ -24,7 +24,7 @@
     --responsive-index              : (1vw + 1vh);
     --spinner-size                  : 60px;
     --header-height					: 80px;
-    --section-header-size           : 24px;
+    --section-header-size           : 3em;
     --section-mobile-padding        : 30px;
     --section-desktop-padding       : 40px;
 
