--- a/assets/scss/layout/_sections.scss
+++ b/assets/scss/layout/_sections.scss
@@ -1,6 +1,7 @@
 .section {
   width: 100%;
   height: 100vh;
+  margin-top: 40px;
 
   &-container {
     width: 100%;
@@ -17,7 +18,7 @@
     text-align: center;
     position: relative;
     text-transform: uppercase;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     line-height: 1;
     font-size: var(--section-header-size);
     font-weight: bold;
@@ -26,4 +27,44 @@
 
 .theme-color{
   color: var(--primary-color);
+}
+
+
+
+
+// ABOUT US SECTION 
+
+.section#about{
+  height: max-content;
+}
+
+.about-box{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  .about-img-box{
+    width: 40%;
+    max-width: 500px;
+    margin-right: 50px;
+    border-radius: 10px;
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      border-radius: 15px;
+    }
+  }
+
+  .about-text-box{
+    width: 40%;
+    max-width: 500px;
+    text-align: justify;
+    padding-top: 10px;
+
+    p{
+      margin-bottom: 25px;
+    }
+  }
 }
