about section markup (horizontal) + mobile markup + animations update

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -3,7 +3,7 @@
 @import 'utils/variables/theme';
 @import 'utils/variables/breakpoints';
 @import 'utils/normalize';
-@import 'utils/animations';
+@import 'utils/addons/animations';
 @import 'utils/mixins/respond';
 @import 'utils/mixins/images';
 
