--- a/assets/scss/components/_back-to-top.scss
+++ b/assets/scss/components/_back-to-top.scss
@@ -5,7 +5,7 @@
   line-height: 1;
   position: fixed;
   bottom: 30px;
-  right: 30px;
+  right: 24px;
   cursor: pointer;
   display: none;
   background-color: rgba(27, 54, 64, 0.9);
@@ -22,7 +22,7 @@
   background-position: center center;
   -webkit-text-size-adjust: 0%;
   font-size-adjust: 0%;
-  border: 2px solid #2b4651;
+  border: 2px solid rgba(27, 54, 64, 0.9);
   
   @include respond-to(desktop){
     width: 55px;
