--- a/assets/scss/layout/_sections.scss
+++ b/assets/scss/layout/_sections.scss
@@ -1,6 +1,6 @@
 .section {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   margin-top: 40px;
 
   &-container {
@@ -20,8 +20,14 @@
     text-transform: uppercase;
     margin-bottom: 40px;
     line-height: 1;
-    font-size: var(--section-header-size);
+    font-size: 1.5em;
     font-weight: bold;
+    @include respond-to(tablet){
+      font-size: 2em;
+    }
+    @include respond-to(desktop){
+      font-size: var(--section-header-size);
+    }
   }
 }
 
@@ -34,9 +40,9 @@
 
 // ABOUT US SECTION 
 
-.section#about{
-  height: max-content;
-}
+// .section#about{
+//   height: max-content
+// }
 
 .about-box{
   width: 100%;
@@ -45,24 +51,24 @@
   justify-content: center;
 
   .about-img-box{
-    width: 40%;
-    max-width: 500px;
-    margin-right: 50px;
-    border-radius: 10px;
+    width: inherit;
+    height: 50vh;
     img{
       width: 100%;
       height: 100%;
-      object-fit: contain;
-      border-radius: 15px;
+      object-fit: cover;
+      border-radius: 10px 10px 0 0;
+      border: 4px solid var(--primary-color);
     }
   }
 
   .about-text-box{
-    width: 40%;
-    max-width: 500px;
+    width: inherit;
     text-align: justify;
-    padding-top: 10px;
-
+    padding: 30px 40px 5px 40px;
+    border: 4px solid var(--primary-color);
+    border-top: none;
+    border-radius: 0 0 10px 10px;
     p{
       margin-bottom: 25px;
     }
