--- a/assets/scss/utils/_normalize.scss
+++ b/assets/scss/utils/_normalize.scss
@@ -66,6 +66,10 @@ table { border-collapse: collapse; border-spacing: 0; }
 td, th { padding: 0; text-align: left; }
 
 body{
+    // background: url('../media/images/utils/body-bg-2.jpg') no-repeat center center;
+    // background-size: 100% 100%;
+    // background-attachment: fixed;
+    // background-image: linear-gradient(180deg, rgba(20,34,39,1) 0%, rgba(16,90,116,1) 100%);
     background-color: var(--body-bg-color);
     font-family: var(--font-primary);
     color: var(--font-color);
