Stories section markup + slider setup

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -11,8 +11,10 @@
 @import 'components/preloader';
 @import 'components/navbar';
 @import 'components/back-to-top';
+@import 'components/slider';
 
 /* Layout and sections styles */
 @import 'layout/header';
 @import 'layout/sections';
+@import 'layout/stories';
 @import 'layout/footer';
