Events | basic section setup

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -17,4 +17,5 @@
 @import 'layout/header';
 @import 'layout/sections';
 @import 'layout/stories';
+@import 'layout/events';
 @import 'layout/footer';
