Video poster mirror functional

--- a/assets/scss/utils/variables/_theme.scss
+++ b/assets/scss/utils/variables/_theme.scss
@@ -9,7 +9,7 @@
     --primary-color		    	    : #52C2C8; // Main color. Used in most conponents and elements.
     --primary-color-contrast	    : #2f7a96; // Hover effect on buttons
     --spinner-bg-color              : var(--body-bg-color);
-    --body-bg-color                 : #142227;
+    --body-bg-color                 : #08070e;
     --navbar-bg-color               : rgba(9, 12, 14, 0.5);
 
     // Event colors
