--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -79,3 +79,29 @@
   }
 
 }
+
+.video-thumb-mirror{
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 100%;
+  left: 0;
+  z-index: 0;
+  transform: scale(1, -1);
+  filter: blur(6px);
+  opacity: 0.3;
+
+  &::after{
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    left: 0px;
+    height: 100%;
+    background: linear-gradient(to bottom, #08070e 0%, #08070e 80%, rgba(8, 7, 14, 0) 100%);
+  }
+}
