About section grid markup + some minor layout changes

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -14,8 +14,9 @@
 @import 'components/slider';
 
 /* Layout and sections styles */
-@import 'layout/header';
 @import 'layout/sections';
+@import 'layout/header';
+@import 'layout/about';
 @import 'layout/stories';
 @import 'layout/events';
 @import 'layout/footer';
