--- a/assets/scss/components/_back-to-top.scss
+++ b/assets/scss/components/_back-to-top.scss
@@ -17,7 +17,7 @@
   transition: .3s linear background-color,.3s linear background-image, .3s linear color, .3s linear border, .3s linear box-shadow;
   box-sizing: border-box;
   background-repeat: no-repeat;
-  background-image: url(../media/images/icons/arrow-black.png);
+  background-image: url(../media/images/icons/arrow.png);
   background-size: 15px 10px;
   background-position: center center;
   -webkit-text-size-adjust: 0%;
@@ -29,11 +29,11 @@
     height: 55px;
     font-size: 35px;
     padding-bottom: 8px;
+    right: 60px;
     
     &:hover{
       border: 2px solid var(--primary-color);
       box-shadow: 0px 0px 4px 2px var(--primary-color);
-      background-image: url(../media/images/icons/arrow.png);
       background-color: rgba(27, 54, 64, 1); 
       color: #fff;
     }
