--- a/assets/scss/components/_slider.scss
+++ b/assets/scss/components/_slider.scss
@@ -38,6 +38,17 @@
     color: #fff;
     width: 44px;
     height: 44px;
+
+    &::after{
+        font-size: 20px;
+        @include respond-to(tablet){
+            font-size: 30px;
+        }
+
+        @include respond-to(desktop){
+            font-size: 45px;
+        }
+    }
 }
 
 .swiper-button-next {
