--- a/assets/scss/layout/_sections.scss
+++ b/assets/scss/layout/_sections.scss
@@ -3,7 +3,7 @@
   height: auto;
   margin-top: 40px;
 
-  &-container {
+  &-wrapper {
     width: 100%;
     max-width: 1920px;
     margin: 0 auto;
@@ -30,6 +30,8 @@
     }
   }
 }
+
+.footer-wrapper
 
 .theme-color{
   color: var(--primary-color);
