--- a/assets/scss/components/_back-to-top.scss
+++ b/assets/scss/components/_back-to-top.scss
@@ -8,13 +8,13 @@
   right: 24px;
   cursor: pointer;
   display: none;
-  background-color: rgba(27, 54, 64, 0.9);
+  background-color: transparent;
   padding-bottom: 6px;
   border-radius: 50%;
   text-align: center;
   z-index: 10;
   color: #000;
-  transition: .3s linear background-color,.3s linear background-image, .3s linear color, .3s linear border, .3s linear box-shadow;
+  transition: .3s linear background-color, .3s linear color, .3s linear box-shadow;
   box-sizing: border-box;
   background-repeat: no-repeat;
   background-image: url(../media/images/icons/arrow.png);
@@ -22,7 +22,8 @@
   background-position: center center;
   -webkit-text-size-adjust: 0%;
   font-size-adjust: 0%;
-  border: 2px solid rgba(27, 54, 64, 0.9);
+  border: 2px solid var(--primary-color);
+  backdrop-filter: blur(5px);
   
   @include respond-to(desktop){
     width: 55px;
@@ -30,11 +31,11 @@
     font-size: 35px;
     padding-bottom: 8px;
     right: 60px;
+    bottom: 65px;
     
     &:hover{
       border: 2px solid var(--primary-color);
       box-shadow: 0px 0px 4px 2px var(--primary-color);
-      background-color: rgba(27, 54, 64, 1); 
       color: #fff;
     }
   }
