--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,6 +1,185 @@
 .footer{
+    width: 100%;
+    min-height: 300px;
+    padding: 20px 0 30px 0;
+    margin-top: 250px;
+    background-color: var(--footer-bg-color);
+    position: relative;
+    border-top: 2px solid var(--primary-color);
 
     &-copyright{
+        position: absolute;
+        left: 0; bottom: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 30px;
+        background-color: #0c0c0c;
+        color: #a8a8a8;
         text-align: center;
+        font-size: 12px;
+    }
+
+    &-container{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        text-align: center;
+        padding-bottom: 20px;
+
+        .nav-logo .logo-text{
+            font-size: 40px;
+        
+            @include respond-to(desktop){
+                font-size: 50px;
+            }
+        }
     }
 }
+
+.container-header{
+    font-size: 16px;
+
+    @include respond-to(tablet){
+        font-size: 18px;
+    }
+
+    @include respond-to(desktop){
+        font-size: 20px;
+    }
+}
+
+.mail-container{
+    margin: 15px 0;
+    .container-header{
+        margin-bottom: 25px;
+    }
+
+
+    .mail-box{
+        position: relative;
+
+        &:hover{
+            .copy-mail{
+                opacity: 1;
+            }
+        }
+        .email-link{
+            display: flex;
+            align-items: center;
+            height: 44px;
+            padding-right: 15px;
+            border: 2px solid var(--primary-color);
+            border-radius: 25px;
+            color: var(--font-color);
+            transition: .3s linear box-shadow;
+    
+            &:hover{
+                box-shadow: 0px 0px 4px 2px var(--primary-color);
+            }
+
+            .email-ico{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 44px;
+                height: 44px;
+                border-radius: 50%;
+                background-color: var(--primary-color);
+                margin: 0 10px 0 -2px;
+
+                svg{
+                    width: 30px;
+                    height: 25px;
+                    fill: #fff;
+                }
+            }
+        }
+        .copy-mail{
+            display: block;
+            background-color: transparent;
+            width: 30px;
+            height: 40px;
+            position: absolute;
+            top: 49%; right: -30px;
+            transform: translateY(-50%);
+            transition: .3s linear opacity;
+            opacity: 0;
+            cursor: pointer;
+    
+            svg{
+                width: inherit;
+                height: inherit;
+                fill: var(--primary-color);
+            }
+
+            .copy-success{
+                display: none;
+                height: 20px;
+                position: absolute;
+                top: 53%; right: -110px;
+                transform: translateY(-50%);
+                color: var(--primary-color);
+                white-space: nowrap;
+                font-family:  var(--font-primary);
+            }
+        }
+    }
+}
+
+.social-container{
+    margin: 15px 0;
+
+    .container-header{
+        margin-bottom: 20px;
+    }
+
+    .social-box{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        li{
+            width: 40px;
+            height: 40px;
+            margin-right: 20px;
+
+            @include respond-to(tablet){
+                width: 50px;
+                height: 50px;
+            }
+
+            &:last-child{
+                margin-right: 0;
+            }
+        }
+
+        .social-link{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: inherit;
+            height: inherit;
+            border: 2px solid var(--primary-color);
+            border-radius: 50%;
+            overflow: hidden;
+            transition: .3s linear box-shadow;
+
+            &:hover{
+                box-shadow: 0px 0px 4px 2px var(--primary-color);
+            }
+
+            svg{
+                width: 80%;
+                height: 80%;
+                fill: var(--primary-color);
+            }
+        }
+    }
+}
+
+
+
