--- a/assets/scss/utils/variables/_theme.scss
+++ b/assets/scss/utils/variables/_theme.scss
@@ -11,6 +11,7 @@
     --spinner-bg-color              : var(--body-bg-color);
     --body-bg-color                 : #08070e;
     --navbar-bg-color               : rgba(9, 12, 14, 0.5);
+    --footer-bg-color               : #060609;
 
     // Event colors
     --danger-color                  : #ff7473; // Delete button, Negative numbers in analytics
