--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -19,4 +19,5 @@
 @import 'layout/about';
 @import 'layout/stories';
 @import 'layout/events';
+@import 'layout/parallax';
 @import 'layout/footer';
