--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer{
     width: 100%;
     min-height: 300px;
-    padding: 20px 0 30px 0;
+    padding: 40px 0 30px 0;
     margin-top: 50px;
     background-color: var(--footer-bg-color);
     position: relative;
@@ -53,7 +53,8 @@
 }
 
 .mail-container{
-    margin: 15px 0;
+    margin: 20px 0 30px 0;
+    
     .container-header{
         margin-bottom: 25px;
     }
