--- a/assets/scss/layout/_parallax.scss
+++ b/assets/scss/layout/_parallax.scss
@@ -1,10 +1,14 @@
 .parallax-section{
-    height: 300px;
+    height: 350px;
     position: relative;
-    margin: 150px 0;
+    margin: 100px 0 50px 0;
     background-size: cover;
     background-position: center;
     background-attachment: fixed; 
+
+    @include respond-to(tablet){
+        margin: 150px 0 100px 0;
+    }
 
     &::before{
         content: '';
@@ -13,7 +17,7 @@
         position: absolute;
         left: 0; top: 0;
         z-index: 5;
-        background: linear-gradient(180deg, rgb(0 0 0 / 80%) 0%, rgb(0 0 0 / 60%) 100%);
+        background: linear-gradient(180deg, rgb(0 0 0 / 70%) 0%, rgb(0 0 0 / 95%) 100%);
     }
 
 }
@@ -23,6 +27,9 @@
 }
 
 .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     color: white;
     position: absolute;
@@ -32,12 +39,20 @@
     transform: translate(-50%, -50%);
 
     .content-header{
-        font-size: 30px;
+        font-size: 20px;
         margin-bottom: 25px;
+
+        @include respond-to(tablet){
+            font-size: 25px;
+        }
+
+        @include respond-to(desktop){
+            font-size: 30px;
+        }
     }
 }
 
-.parallax-btn{
+.primary-btn{
     height: 50px;
     padding: 0 20px;
     background-color: transparent;
@@ -49,8 +64,50 @@
     transition: .3s linear background-color;
     background-color: var(--primary-color);
     transition: .3s linear box-shadow;
+    font-size: 16px;
+    line-height: 16px;
+    vertical-align: middle;
     
     &:hover{
         box-shadow: 0px 0px 4px 2px var(--primary-color);
+    }
+
+    &.with-l-ico{
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: transparent;
+        border-left: 2px solid transparent;
+        border-radius: 0px 25px 25px 0px;
+        padding: 0 20px 0 40px;
+        transition: .3s linear transform;
+        white-space: nowrap;
+        transform: translateX(10px);
+
+        &:hover{
+            box-shadow: none;
+            transform: translateX(10px) scale(1.03);
+        }
+
+        .btn-ico-left{
+            position: absolute;
+            left: -22px; top: -2px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 50px;
+            border: 2px solid var(--primary-color);
+            border-radius: 50%;
+            z-index: 10;
+
+            svg{
+                width: 30px;
+                height: 30px;
+                transform: rotate(90deg);
+                margin-right: 2px;
+            }
+        }
     }
 }
