--- a/assets/scss/layout/_stories.scss
+++ b/assets/scss/layout/_stories.scss
@@ -1,5 +1,5 @@
 #stories{
-  padding-bottom: 80px;
+  padding: 80px 0;
 }
 
 #stories .swiper-slide{
@@ -89,15 +89,24 @@
 
         }
 
-        &:after{
-            content: '';
-            height: 10px;
-            width: 20px;
+        // &:after{
+        //     content: '';
+        //     height: 10px;
+        //     width: 20px;
+        //     position: absolute;
+        //     top: 50%; right: -30px;
+        //     transform: translateY(-70%);
+        //     background: url(../media/images/icons/long-arrow.png) no-repeat center center;
+        //     background-size: 100% 100%;
+        // }
+
+        svg{
+            fill: var(--primary-color);
+            height: 28px;
+            width: 30px;
             position: absolute;
             top: 50%; right: -30px;
-            transform: translateY(-70%);
-            background: url(../media/images/icons/long-arrow.png) no-repeat center center;
-            background-size: 100% 100%;
+            transform: translateY(-60%);
         }
 
     }
