--- a/assets/scss/layout/_parallax.scss
+++ b/assets/scss/layout/_parallax.scss
@@ -78,29 +78,29 @@
         justify-content: space-between;
         align-items: center;
         background-color: transparent;
-        border-left: 2px solid transparent;
-        border-radius: 0px 25px 25px 0px;
-        padding: 0 20px 0 40px;
-        transition: .3s linear transform;
+        border-radius: 25px;
+        padding: 0 20px 0 60px;
+        transition: .3s linear box-shadow;
         white-space: nowrap;
         transform: translateX(10px);
 
         &:hover{
-            box-shadow: none;
-            transform: translateX(10px) scale(1.03);
+            box-shadow: 0px 0px 4px 2px var(--primary-color);
         }
 
         .btn-ico-left{
             position: absolute;
-            left: -22px; top: -2px;
+            left: -1px; top: -1px;
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 50px;
-            height: 50px;
+            width: 49px;
+            height: 49px;
             border: 2px solid var(--primary-color);
             border-radius: 50%;
             z-index: 10;
+            background-color: var(--primary-color);
+
 
             svg{
                 width: 30px;
