Resources page markup

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -21,3 +21,6 @@
 @import 'layout/events';
 @import 'layout/parallax';
 @import 'layout/footer';
+
+/* External pages styles */
+@import 'pages/resources';
