--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -10,8 +10,10 @@
 /* Component styles */
 @import 'components/preloader';
 @import 'components/navbar';
+@import 'components/buttons';
 @import 'components/back-to-top';
 @import 'components/slider';
+@import 'components/breadcrumbs';
 
 /* Layout and sections styles */
 @import 'layout/sections';
@@ -24,3 +26,5 @@
 
 /* External pages styles */
 @import 'pages/resources';
+@import 'pages/stories';
+@import 'pages/events';
