--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -27,4 +27,4 @@
 /* External pages styles */
 @import 'pages/resources';
 @import 'pages/stories';
-@import 'pages/events';
+@import 'pages/event';
