Mobile devices markup updates

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -26,5 +26,5 @@
 
 /* External pages styles */
 @import 'pages/resources';
-@import 'pages/stories';
+@import 'pages/story';
 @import 'pages/event';
