--- a/assets/scss/components/_back-to-top.scss
+++ b/assets/scss/components/_back-to-top.scss
@@ -4,7 +4,7 @@
   font-size: 30px;
   line-height: 1;
   position: fixed;
-  bottom: 30px;
+  bottom: 45px;
   right: 24px;
   cursor: pointer;
   display: none;
@@ -12,7 +12,7 @@
   padding-bottom: 6px;
   border-radius: 50%;
   text-align: center;
-  z-index: 10;
+  z-index: 100;
   color: #000;
   transition: .3s linear background-color, .3s linear color, .3s linear box-shadow;
   box-sizing: border-box;
@@ -24,8 +24,8 @@
   font-size-adjust: 0%;
   border: 2px solid var(--primary-color);
   backdrop-filter: blur(5px);
-  
-  @include respond-to(desktop){
+
+  @include respond-to(tablet){
     width: 55px;
     height: 55px;
     font-size: 35px;
