--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -63,7 +63,6 @@
         border-radius: 25px;
         padding: 0 20px 0 60px;
         white-space: nowrap;
-        transform: translateX(10px);
 
         &:hover{
             .btn-ico-left{
@@ -96,15 +95,19 @@
     }
 
     &#intro-play{
-        height: 60px;
-        border-radius: 30px;
-        padding: 0 20px 0 70px;
-        margin-top: 50px;
-        display: none;
-        .btn-ico-left{
-            width: 60px;
+        margin-top: 30px;
+
+        @include respond-to(tablet){
             height: 60px;
-            top: -2px;
+            border-radius: 30px;
+            padding: 0 20px 0 70px;
+            margin-top: 50px;
+
+            .btn-ico-left{
+                width: 60px;
+                height: 60px;
+                top: -2px;
+            }
         }
     }
 }
