--- a/assets/scss/pages/_event.scss
+++ b/assets/scss/pages/_event.scss
@@ -1,14 +1,21 @@
 .event-header-container{
+    width: calc(100% - 40px);
     max-width: 900px;
-    height: 250px;
+    height: 200px;
     position: relative;
     border: 2px solid var(--primary-color);
     border-radius: 15px 15px 0 0;
-    margin: 0 auto;
+    margin: 0 20px;
     overflow: hidden;
 
-    @include respond-to(desktop){
+    @include respond-to(tablet){
+        height: 250px;
+        margin: 0 auto;
+    }
 
+    @include respond-to(desktop){
+        width: 100%;
+        height: 250px;
     }
     
     &::after{
@@ -38,14 +45,18 @@
         position: absolute;
         left: 0; bottom: 20px;
         z-index: 5;
-        font-size: 35px;
+        font-size: 25px;
         padding-left: 25px;
+
+        @include respond-to(tablet){
+            font-size: 35px;
+        }
     }
 }
 
 
 .event-info-container{
-    width: 100%;
+    width: calc(100% - 40px);
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -54,13 +65,21 @@
     border: 2px solid var(--primary-color);
     border-top: none;
     border-radius: 0 0 15px 15px;
+    margin: 0 20px;
+
+    @include respond-to(desktop){
+        width: 100%;
+        margin: 0 auto;
+    }
 
     .event-date-box{
         padding-left: 25px;
+        margin-bottom: 15px;
         position: relative;
 
         @include respond-to(tablet){
             padding-left: 30px;
+            margin-bottom: 0px;
         }
 
         &::before{
@@ -84,9 +103,11 @@
         transition: .3s linear color;
         position: relative;
         padding-left: 25px;
+        margin-bottom: 10px;
 
         @include respond-to(tablet){
             padding-left: 30px;
+            margin-bottom: 0;
         }
 
         &:hover{
@@ -159,12 +180,18 @@
 }
 
 .event-description-container{
-    width: 100%;
+    width: calc(100% - 40px);
     padding: 20px;
     border: 2px solid var(--primary-color);
     border-radius: 15px;
     text-align: justify;
-    margin-top: 30px;
+    margin: 20px auto 0 auto;
+
+    @include respond-to(desktop){
+        width: 100%;
+        margin: 30px auto 0 auto;
+
+    }
 
     p{
         margin-bottom: 25px;
