--- a/assets/scss/pages/_story.scss
+++ b/assets/scss/pages/_story.scss
@@ -7,6 +7,11 @@
 }
 
 .story-layout{
+    padding: 0 20px;
+
+    @include respond-to(tablet){
+        padding: 0;
+    }
     .breadcrumbs{
         padding: 25px 0;
     }
@@ -14,6 +19,10 @@
     .text-container{
         padding: 25px;
         border-radius: 25px;
-        border: 2px solid var(--primary-color)
+        border: 2px solid var(--primary-color);
+
+        p{
+            margin-bottom: 20px;
+        }
     }
 }
