Pages source fix

--- a/assets/scss/components/_breadcrumbs.scss
+++ b/assets/scss/components/_breadcrumbs.scss
@@ -19,7 +19,7 @@
             color: #cbcbcb;
 
             &::after {
-                content: "./";
+                content: "/";
                 margin-left: 8px;
                 color: #fff;
             }
