--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -33,6 +33,8 @@
 }
 
 .primary-btn{
+    display: flex;
+    align-items: center;
     height: 50px;
     padding: 0 20px;
     background-color: transparent;
@@ -41,7 +43,7 @@
     border-radius: 25px;
     border: 2px solid var(--primary-color);
     font-family: var(--font-primary);
-    transition: .3s linear background-color;
+    transition: .3s linear background-color, .3s linear box-shadow;
     background-color: var(--primary-color);
     transition: .3s linear box-shadow;
     font-size: 16px;
@@ -63,6 +65,7 @@
         border-radius: 25px;
         padding: 0 20px 0 60px;
         white-space: nowrap;
+        backdrop-filter: blur(10px);
 
         &:hover{
             .btn-ico-left{
@@ -92,6 +95,29 @@
                 margin-right: 2px;
             }
         }
+        &.spotify-link{
+            margin-top: 40px;
+            border: 2px solid #52c887;
+            font-size: 14px;
+
+            &:hover{
+                box-shadow: 0px 0px 4px 2px #52c887;
+
+                .btn-ico-left{
+                    box-shadow: 0px 0px 4px 2px #52c887;
+                }
+            }
+
+            .btn-ico-left{
+                background-color: #52c887;
+                border-color: #52c887;
+
+                svg{
+                    transform: rotate(0deg);
+                    margin: 0;
+                }
+            }
+        }
     }
 
     &#intro-play{
@@ -113,41 +139,44 @@
 }
 
 .back-home{
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    color: #fff;
-    font-size: 20px;
-    text-transform: uppercase;
-    padding-left: 25px;
-    z-index: 100;
+  width: 45px;
+  height: 45px;
+  font-size: 30px;
+  line-height: 1;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  cursor: pointer;
+  background-color: transparent;
+  padding-bottom: 6px;
+  border-radius: 50%;
+  text-align: center;
+  z-index: 100;
+  color: #000;
+  transition: .3s linear background-color, .3s linear color, .3s linear box-shadow;
+  box-sizing: border-box;
+  background-repeat: no-repeat;
+  background-image: url(../media/images/icons/chevron.png);
+  background-size: 15px 10px;
+  background-position: center top 14px;
+  -webkit-text-size-adjust: 0%;
+  font-size-adjust: 0%;
+  border: 2px solid var(--font-color);
+  backdrop-filter: blur(5px);
+  transform: rotate(270deg);
 
-    &::before{
-      content: '';
-      position: absolute;
-      left: 0; top: 50%;
-      width: 20px;
-      height: 10px;
-      transform: rotate(180deg) translateY(50%);
-      background: url(../media/images/icons/arrow.svg) no-repeat center center;
-      background-size: cover;
-    }
-
-    &::after{
-      content: '';
-      height: 2px;
-      width: 55px;
-      background-color: #fff;
-      position: absolute;
-      bottom: -2px; left: 25px;
-      transition: linear .4s width;
-
-    }
-
+  @include respond-to(tablet){
+    width: 55px;
+    height: 55px;
+    font-size: 35px;
+    padding-bottom: 8px;
+    right: 60px;
+    bottom: 65px;
+    background-position: center top 19px;
+    
     &:hover{
-      &::after{
-        width: 153px;
-      }
+      box-shadow: 0px 0px 4px 2px var(--primary-color);
+      color: #fff;
     }
   }
-
+}
