--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -1,144 +1,154 @@
-.navigation-container{
-	width: 100%;
-	height: var(--header-height);
-	padding: 0 var(--section-mobile-padding);
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	position: fixed;
-	z-index: 1000;
-    @include respond-to(desktop){
-        padding: 0 50px;
-    }
+.navigation-container {
+  width: 100%;
+  height: var(--header-height);
+  padding: 0 var(--section-mobile-padding);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  z-index: 1000;
+  @include respond-to(desktop) {
+    padding: 0 50px;
+  }
 
-    .nav-filter{
-        width: 100%;
-        height: inherit;
-        position: absolute;
-        transition: .3s linear backdrop-filter, .3s linear background-color;
-        top: 0; left: 0;
-        background-color: transparent;
-        backdrop-filter: blur(0px);
-        opacity: 1;
-        z-index: -1;
-        &.active-nav{
-            background-color: var(--navbar-bg-color);
-            backdrop-filter: blur(25px);
-        }
-    }
-}
-
-.nav-logo{
-    .logo-text{
-        font-family: var(--font-logo);
-        font-size: 30px;
-        text-transform: uppercase;
-    }
-}
-
-
-nav.navbar{
-    display: none;
-    position: fixed;
+  .nav-filter {
     width: 100%;
-    height: 100vh;
-    top: 0; left: 0;
-    padding-top: var(--header-height);
-    padding-left: 80px;
-    background-color: var(--navbar-bg-color);
-    backdrop-filter: blur(25px);
-    text-align: center;
-    padding-left: 0;
-
-    @include respond-to(tablet){
-        padding-right: 100px;
-        text-align: right;
+    height: inherit;
+    position: absolute;
+    transition: 0.3s linear backdrop-filter, 0.3s linear background-color;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    backdrop-filter: blur(0px);
+    opacity: 1;
+    z-index: -1;
+    &.active-nav {
+      background-color: var(--navbar-bg-color);
+      backdrop-filter: blur(25px);
     }
-
-    @include respond-to(desktop){
-        position: static;
-        display: flex !important;
-        align-items: center;
-        width: auto;
-        height: var(--header-height);
-        background-color: transparent;
-        backdrop-filter: blur(0px);
-        padding: 0;
-    }
-    .nav-link{
-        display: block;
-        color: #fff;
-        text-transform: uppercase;
-        font-size: 2em;
-        font-weight: bold;
-        margin-bottom: 20px;
-        transition: .3s linear color;
-        position: relative;
-        @include respond-to(tablet){
-            font-size: 2.5em;
-        }
-        @include respond-to(desktop){
-            margin: 0 15px;
-            font-size: 1em;
-        }
-        &:hover{
-            color: var(--primary-color-contrast);
-        }
-        &.active{
-          color: var(--primary-color);
-          &:hover{
-            color: var(--primary-color-contrast);
-          }
-        }
-    }
-
-    .nav-external{
-        @include respond-to(desktop){
-            padding: 5px 15px;
-            border-radius: 20px;
-            border: 2px solid var(--primary-color);
-            transition: .3s linear background-color;
-            &:hover{
-                background-color: var(--primary-color);
-                color: #fff;
-            }
-        }
-    }
+  }
 }
 
+.nav-logo {
+  .logo-text {
+    font-family: var(--font-logo);
+    font-size: 30px;
+    text-transform: uppercase;
+  }
+  .logo-img {
+    display: block;
+    width: var(--logo-size);
+    height: var(--logo-size);
 
-.burger{
-    width: 30px;
-    height: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    @include respond-to(tablet) {
+      width: calc(var(--logo-size) + 5px);
+      height: calc(var(--logo-size) + 5px);
+    }
+  }
+}
+
+nav.navbar {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  padding-top: var(--header-height);
+  padding-left: 80px;
+  background-color: var(--navbar-bg-color);
+  backdrop-filter: blur(25px);
+  text-align: center;
+  padding-left: 0;
+
+  @include respond-to(tablet) {
+    padding-right: 100px;
+    text-align: right;
+  }
+
+  @include respond-to(desktop) {
+    position: static;
+    display: flex !important;
     align-items: center;
-    cursor: pointer;
+    width: auto;
+    height: var(--header-height);
+    background-color: transparent;
+    backdrop-filter: blur(0px);
+    padding: 0;
+  }
+  .nav-link {
+    display: block;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 20px;
+    transition: 0.3s linear color;
     position: relative;
-    z-index: 1000;
-    @include respond-to(desktop){
-        display: none;
+    @include respond-to(tablet) {
+      font-size: 2.5em;
     }
-    span{
-        width: 30px;
-        height: 3px;
-        background-color: #fff;
-        display: block;
-        margin: 3px auto;
-        transition: all 0.3s ease-in-out;
+    @include respond-to(desktop) {
+      margin: 0 15px;
+      font-size: 1em;
     }
-    &.open{
-        span{
-            &:nth-child(2){
-              opacity: 0;
-            }
-            &:nth-child(1){
-              transform: translateY(9px) rotate(45deg);
-            }
-            &:nth-child(3){
-              transform: translateY(-9px) rotate(-45deg);
-            }
-        }
+    &:hover {
+      color: var(--primary-color-contrast);
     }
+    &.active {
+      color: var(--primary-color);
+      &:hover {
+        color: var(--primary-color-contrast);
+      }
+    }
+  }
+
+  .nav-rounded {
+    @include respond-to(desktop) {
+      padding: 5px 15px;
+      border-radius: 20px;
+      border: 2px solid var(--primary-color);
+      transition: 0.3s linear background-color;
+      &:hover {
+        background-color: var(--primary-color);
+        color: #fff !important;
+      }
+    }
+  }
+}
+
+.burger {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  z-index: 1000;
+  @include respond-to(desktop) {
+    display: none;
+  }
+  span {
+    width: 30px;
+    height: 3px;
+    background-color: #fff;
+    display: block;
+    margin: 3px auto;
+    transition: all 0.3s ease-in-out;
+  }
+  &.open {
+    span {
+      &:nth-child(2) {
+        opacity: 0;
+      }
+      &:nth-child(1) {
+        transform: translateY(9px) rotate(45deg);
+      }
+      &:nth-child(3) {
+        transform: translateY(-9px) rotate(-45deg);
+      }
+    }
+  }
 }
