--- a/assets/scss/layout/_about.scss
+++ b/assets/scss/layout/_about.scss
@@ -1,66 +1,207 @@
-// ABOUT US SECTION 
-#about{
-    margin: 80px 0;
+// ABOUT US SECTION
+#about {
+  margin: 80px 0;
 
-    .section-header{
-        margin-bottom: 60px;
+  .section-header {
+    margin-bottom: 40px;
+    @include respond-to(tablet) {
+      margin-bottom: 60px;
     }
-}
+  }
 
-.about-box{
-    width: 100%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: auto;
-    gap: 20px;
+  .about-header{
+    text-align: center;
+    font-size: 18px;
+    padding: 0;
+    margin-bottom: 0px;
 
-    @include respond-to(tablet){
-      width: 90%;
+    @include respond-to(tablet) {
+      font-size: 25px;
+      padding: 0 5%;
+      margin-bottom: 20px;
     }
 
-    @include respond-to(desktop){
-      gap: 30px 20px;
-      grid-template-columns: repeat(2, 1fr);
-    }
-  
-    .about-text-box{
-      width: 100%;
-      text-align: justify;
-      padding: 25px;
-      border: 4px solid var(--primary-color);
-      border-radius: 15px;
-      font-size: 14px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
+    a{
+      color: var(--font-color);
+      text-decoration: underline;
+      transition: .3s linear color;
 
-      @include respond-to(tablet){
-        font-size: 16px;
-      }
-
-      @include respond-to(desktop){
-        font-size: 20px;
-      }
-
-      &:last-child{
-        @include respond-to(desktop){
-          grid-area: 2/1/2/3;
-        }
-      }
-
-      h5{
-        text-align: left;
-        font-size: 1.5em;
-        margin-bottom: 25px;
-      }
-
-      ul {
-        padding-left: 20px;
-        li{
-            list-style-type: disc;
-            margin-bottom: 10px;
-        }
+      &:hover{
+        color: var(--primary-color);
       }
     }
   }
+}
+
+.about-box {
+  width: 100%;
+  margin: 50px auto 0 auto;
+  position: relative;
+  overflow: hidden;
+
+  @include respond-to(tablet) {
+    width: 80%;
+    margin: 150px auto 0 auto;
+  }
+
+  .about-text-box {
+    width: 100%;
+    font-size: 14px;
+    margin-bottom: 50px;
+
+    @include respond-to(tablet) {
+      font-size: 16px;
+      margin-bottom: 75px;
+    }
+
+    @include respond-to(desktop) {
+      font-size: 20px;
+    }
+
+    &:nth-child(odd){
+      padding-right: 20%;
+      border-left: 3px solid var(--primary-color);
+      padding-left: 15px;
+      text-align: left;
+
+      @include respond-to(tablet) {
+        padding-right: 50%;
+      }
+    }
+
+    &:nth-child(even){
+      padding-left: 20%;
+      border-right: 3px solid var(--primary-color);
+      padding-right: 15px;
+      text-align: right;
+      @include respond-to(tablet) {
+        padding-left: 50%;
+      }
+    }
+
+    p {
+      margin-bottom: 20px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+
+.about-partners-container{
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 60px;
+
+  
+  .partners-box{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+
+    @include respond-to(tablet) {
+      justify-content: space-around;
+    }
+
+    .partner-link{
+      color: var(--font-color);
+      margin-bottom: 50px;
+
+      @include respond-to(desktop) {
+        margin-bottom: 0px;
+      }
+
+      &:hover{
+        .partner-thumb{
+            box-shadow: 0px 0px 50px 0px var(--primary-color);
+        }
+
+        .partner-visit-link{
+          background-color: var(--primary-color);
+          border-color: var(--primary-color);
+        }
+      }
+
+      .partner-box{
+        width: 200px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+  
+        img[alt="Mike Lang Stories"]{
+          width: 150px;
+          transform: translateX(5px);
+        }
+
+        img[alt="Krystle Schofield Stories"]{
+          width: 100px;
+          transform: translate(10px, -10px);
+        }
+      }
+    }
+    
+
+    .partner-thumb{
+      min-width: 200px;
+      height: 200px;
+      overflow: hidden;
+      border-radius: 50%;
+      border: 3px solid var(--primary-color);
+      box-shadow: 0px 0px 4px 2px transparent;
+      transition: .4s linear box-shadow;
+
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        user-select: none;
+        pointer-events: none;
+      }
+
+    }
+
+    .partner-name{
+      margin: 20px 0;
+      font-size: 30px;
+      white-space: nowrap;
+    }
+
+    .partner-visit-link{
+      border: 2px solid #fff;
+      position: relative;
+      color: var(--font-color);
+      padding: 10px 50px 10px 20px;
+      border-radius: 30px;
+      font-size: 16px;
+      box-shadow: 0px 0px 10px 2px transparent;
+      transition: .3s linear background-color, .3s linear border-color;
+
+
+      &::after{
+          content: '';
+          position: absolute;
+          right: 15px; top: 49%;
+          width: 22px;
+          height: 22px;
+          background: url(../media/images/icons/link-ico.svg) no-repeat center center;
+          background-size: cover;
+          transform: translateY(-50%);
+          z-index: 1;
+      }
+    }
+
+    hr{
+      border: 1px solid var(--primary-color);
+      width: 180px;
+      margin: 100px 0;
+      display: none;
+
+      @include respond-to(desktop) {
+        display: block;
+      }
+    }
+  }
+}
