--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,7 +1,8 @@
 .footer{
     width: 100%;
     min-height: 300px;
-    padding: 40px 0 30px 0;
+    // padding: 40px 0 30px 0;
+    padding: 40px 0 0px 0;
     margin-top: 50px;
     background-color: var(--footer-bg-color);
     position: relative;
@@ -38,8 +39,19 @@
             }
         }
     }
-}
 
+    .fund-banner{
+        text-align: center;
+        padding: 10px;
+        font-size: 12px;
+        background-color: rgb(82 194 200 / 80%);
+        color: #1a1a1a;
+        @include respond-to(tablet) {
+            font-size: 16px;
+        }
+    }
+}
+  
 .container-header{
     font-size: 16px;
 
