--- a/assets/scss/pages/_resources.scss
+++ b/assets/scss/pages/_resources.scss
@@ -30,11 +30,15 @@
     }
 }
 
+.page-description{
+    padding: 0 25px;
+    margin-bottom: 35px;
+    font-size: 25px;
+}
+
 
 .link-container{
-    // border-left: 2px solid var(--primary-color);
-    // padding: 30px 10px 0 40px;
-    // overflow: hidden;
+
 
     padding: 0 20px;
 
@@ -53,19 +57,9 @@
         background-color: var(--primary-color);
         padding: 15px 50px 15px 20px;
         border-radius: 20px;
+        font-size: 16px;
         box-shadow: 0px 0px 10px 2px transparent;
         transition: .3s linear background-color, .3s linear box-shadow;
-
-        &::before{
-            // content: '';
-            position: absolute;
-            left: -25%; top: 50%;
-            width: 50%;
-            height: 2px;
-            background-color: var(--primary-color);
-            transform: translateY(-50%);
-            z-index: -1;
-        }
 
         &::after{
             content: '';
@@ -85,3 +79,4 @@
         }
     }
 }
+
