--- a/assets/scss/pages/_story.scss
+++ b/assets/scss/pages/_story.scss
@@ -2,27 +2,116 @@
     .video-thumb-mirror{
         background-position: top center;
         background-size: 100% 100%;
-        height: 80%;
+        height: 60%;
+        @include respond-to(desktop){
+            height: 80%;
+        }
+    }
+
+    .intro-overlay .overlay-content .intro-heading{
+        font-size: 3em;
+        @include respond-to(tablet){
+            font-size: 6em;
+        }
+        @include respond-to(desktop){
+            font-size: 10em;
+            line-height: 90%;
+        }
+    }
+    .intro-overlay .overlay-content .intro-subheading{
+        font-size: 2em;
+        @include respond-to(tablet){
+            font-size: 3em;
+        }
+        @include respond-to(desktop){
+            font-size: 4em;
+        }
     }
 }
 
 .story-layout{
     padding: 0 20px;
+    overflow: hidden;
 
-    @include respond-to(tablet){
-        padding: 0;
-    }
     .breadcrumbs{
         padding: 25px 0;
     }
 
+    .story-header{
+        font-size: 4em;
+        line-height: 1;
+        margin-bottom: 20px;
+        padding-left: 10px;
+        @include respond-to(tablet){
+            padding-left: 5px;
+            font-size: 7em;
+        }
+        @include respond-to(desktop){
+            padding-left: 0px;
+        }
+    }
+
+    .story-subheader{
+        font-size: 1em;
+        color: #cdcdcd;
+        margin-bottom: 25px;
+        padding-left: 13px;
+        @include respond-to(tablet){
+            padding-left: 5px;
+            font-size: 2em;
+        }
+
+    }
+
+    .text-layout{
+        display: block;
+
+        @include respond-to(tablet){
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 25px;
+        }
+
+        &.col-3{
+            @include respond-to(tablet){
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                gap: 25px;
+            }
+        }
+
+        h6{
+            padding-bottom: 20px;
+            border-bottom: 2px solid var(--primary-color)
+        }
+    }
+
     .text-container{
-        padding: 25px;
+        padding: 20px 25px;
         border-radius: 25px;
         border: 2px solid var(--primary-color);
+        margin-bottom: 25px;
 
+
+        @include respond-to(tablet){
+            padding: 15px 20px;
+        }
         p{
+            color: #cacaca;
             margin-bottom: 20px;
+            text-align: justify;
+            font-size: 1em;
+            &:last-child{
+                margin-bottom: 0;
+            }
+        }
+
+        h6{
+            margin: 0 0 15px 0;
+            padding-top: 5px;
+            font-size: 1.4em;
+            line-height: 1;
+            color: var(--font-color);
         }
     }
 }
